# cmd/main.go
@@ -1,16 +1,19 @@
 package main
 
 import (
-	db "dacode/OldNewProdleckt/internal/DB"
-	"dacode/OldNewProdleckt/internal/handlers"
-	taskservice "dacode/OldNewProdleckt/internal/taskService"
 	"log"
+
+	db "github.com/TheEastWantsThis/OldNew/internal/DB"
+	"github.com/TheEastWantsThis/OldNew/internal/handlers"
+	taskservice "github.com/TheEastWantsThis/OldNew/internal/taskService"
+	"github.com/TheEastWantsThis/OldNew/internal/web/tasks"
 
 	"github.com/labstack/echo/v4"
 	"github.com/labstack/echo/v4/middleware"
 )
 
 func main() {
+
 	database, err := db.InitDB()
 	if err != nil {
 		log.Fatalf("Coud not connect to DB: %v", err)
@@ -26,10 +29,12 @@ func main() {
 
 	e.Use(middleware.CORS())
 	e.Use(middleware.Logger())
+	e.Use(middleware.Recover())
 
-	e.GET("/task", taskHandlers.GetHandler)
-	e.POST("/task", taskHandlers.PostHandler)
-	e.PATCH("/task/:ID", taskHandlers.PatchHandler)
-	e.DELETE("/task/:ID", taskHandlers.DeleteHandler)
-	e.Start("localhost:9090")
+	strictHandler := tasks.NewStrictHandler(taskHandlers, nil) // тут будет ошибка
+	tasks.RegisterHandlers(e, strictHandler)
+
+	if err := e.Start(":9090"); err != nil {
+		log.Fatalf("failed to start with err: %v", err)
+	}
 }
