# internal/handlers/taskHandlers.go
@@ -1,9 +1,11 @@
 package handlers
 
 import (
-	taskservice "dacode/OldNewProdleckt/internal/taskService"
+	"context"
 	"net/http"
-	"strconv"
+
+	taskservice "github.com/TheEastWantsThis/OldNew/internal/taskService"
+	"github.com/TheEastWantsThis/OldNew/internal/web/tasks"
 
 	"github.com/labstack/echo/v4"
 )
@@ -16,73 +18,86 @@ func NewTaskHandler(s taskservice.MainTaskService) *TaskHandler {
 	return &TaskHandler{service: s}
 }
 
-func (h *TaskHandler) GetHandler(c echo.Context) error {
-
-	task, err := h.service.GetAllTask()
-
+func (h *TaskHandler) GetTask(ctx context.Context, request tasks.GetTaskRequestObject) (tasks.GetTaskResponseObject, error) {
+	allTasks, err := h.service.GetAllTask()
 	if err != nil {
-		return c.JSON(http.StatusInternalServerError, map[string]string{"error": "Could not get tasks"})
+		return nil, err
 	}
 
-	return c.JSON(http.StatusOK, task)
+	var response tasks.GetTask200JSONResponse
+
+	for _, t := range allTasks {
+		id := int32(t.ID)
+		task := t.Task
+		accomplished := t.Accomplishment
+
+		response = append(response, tasks.Task{
+			Id:             &id,
+			Task:           &task,
+			Accomplishment: &accomplished,
+		})
+	}
+
+	return response, nil
 }
 
-func (h *TaskHandler) PostHandler(c echo.Context) error {
-	var req taskservice.RequestBodyTask
-	if err := c.Bind(&req); err != nil {
-		return c.JSON(http.StatusBadRequest, map[string]string{"error": "Invalid request"})
-	}
+func (h *TaskHandler) PostTask(ctx context.Context, request tasks.PostTaskRequestObject) (tasks.PostTaskResponseObject, error) {
+	taskRequest := request.Body
 
-	postTask, err := h.service.CreateTask(req)
+	taskToCreate := taskservice.RequestBodyTask{
+		Task:           *taskRequest.Task,
+		Accomplishment: *taskRequest.Accomplishment,
+	}
+	createdTask, err := h.service.CreateTask(taskToCreate)
 
 	if err != nil {
-		return c.JSON(http.StatusBadRequest, map[string]string{"error": "Could not create task"})
+		return nil, err
 	}
 
-	return c.JSON(http.StatusCreated, postTask)
+	id := int32(createdTask.ID)
+
+	response := tasks.PostTask201JSONResponse{
+		Id:             &id,
+		Task:           &createdTask.Task,
+		Accomplishment: &createdTask.Accomplishment,
+	}
+
+	return response, nil
+}
+
+func (h *TaskHandler) PatchTaskId(ctx context.Context, request tasks.PatchTaskIdRequestObject) (tasks.PatchTaskIdResponseObject, error) {
+	id := request.Body.Id
+	IdInt := int32(*id)
+
+	update := request.Body
+
+	updated, err := h.service.UpdateTask(int(IdInt), taskservice.RequestBodyTask{
+		Task:           *update.Task,
+		Accomplishment: *update.Accomplishment,
+	})
+
+	if err != nil {
+		return nil, echo.NewHTTPError(http.StatusBadRequest, "Could not update task")
+	}
+
+	id32 := int32(updated.ID)
+	result := tasks.Task{
+		Id:             &id32,
+		Task:           &updated.Task,
+		Accomplishment: &updated.Accomplishment,
+	}
+
+	return tasks.PatchTaskId201JSONResponse(result), nil
 
 }
 
-func (h *TaskHandler) PatchHandler(c echo.Context) error {
+func (h *TaskHandler) DeleteTaskId(ctx context.Context, request tasks.DeleteTaskIdRequestObject) (tasks.DeleteTaskIdResponseObject, error) {
+	id := request.Body.Id
+	IdInt := int32(*id)
 
-	idStr := c.Param("ID")
-
-	idInt, err := strconv.Atoi(idStr)
-	if err != nil {
-		return c.JSON(http.StatusBadRequest, "Invalid ID format")
+	if err := h.service.DeleteTask(int(IdInt)); err != nil {
+		return nil, echo.NewHTTPError(http.StatusInternalServerError, "Could not delete task")
 	}
 
-	var req taskservice.RequestBodyTask
-
-	if err := c.Bind(&req); err != nil {
-		return c.JSON(http.StatusBadRequest, map[string]string{"error": "Invalid request"})
-	}
-
-	updateTask, err := h.service.UpdateTask(idInt, req)
-	if err != nil {
-		return c.JSON(http.StatusBadRequest, "Could not update task")
-	}
-
-	return c.JSON(http.StatusOK, updateTask)
-}
-
-func (h *TaskHandler) DeleteHandler(c echo.Context) error {
-
-	idStr := c.Param("ID")
-
-	idInt, err := strconv.Atoi(idStr)
-	if err != nil {
-		return c.JSON(http.StatusBadRequest, "Invalid ID format")
-	}
-
-	var req taskservice.RequestBodyTask
-	if err := c.Bind(&req); err != nil {
-		return c.JSON(http.StatusBadRequest, map[string]string{"error": "Invalid request"})
-	}
-
-	if err := h.service.DeleteTask(idInt); err != nil {
-		return c.JSON(http.StatusInternalServerError, map[string]string{"error": "Could not delete task"})
-	}
-
-	return c.NoContent(http.StatusNoContent)
+	return tasks.DeleteTaskId204JSONResponse{}, nil
 }
